[BE] feat(admin-history): 관리자 액션 이력 필터와 조회 대상 선택 연결
- action, actionStatus 필터가 실제 조회 대상을 고르도록 service와 repository 연결
- no-filter 전체 timeline과 filtered selection 의미를 테스트로 고정
- retrospective 반영

Refs #62